--- a/app/src/main/res/layout/leaderboard_bottomsheet.xml
+++ b/app/src/main/res/layout/leaderboard_bottomsheet.xml
@@ -1,72 +1,78 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/bottom_sheet_curve"
     android:orientation="vertical"
-    android:padding="20dp"
-    android:background="@drawable/bottom_sheet_curve">
+    android:padding="20dp">
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Sort By"
-            android:textSize="22sp"
-            android:textStyle="bold"
-            android:layout_marginBottom="10dp"
-            android:textColor="@color/black"/>
-        <RadioGroup
-            android:id="@+id/sort_radioGroup"
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="10dp"
+        android:text="Sort By"
+        android:textColor="@color/black"
+        android:textSize="18sp"
+        android:textStyle="bold" />
+
+    <RadioGroup
+        android:id="@+id/sort_radioGroup"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+        <RadioButton
+            android:id="@+id/score"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-            <RadioButton
-                android:id="@+id/score"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="Score"
-                android:textSize="16sp"
-                android:textColor="@color/black"
-                android:buttonTint="@color/black"/>
-            <RadioButton
-                android:id="@+id/runup"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="Run-Up"
-                android:textSize="16sp"
-                android:textColor="@color/black"
-                android:buttonTint="@color/black"/>
-            <RadioButton
-                android:id="@+id/jump"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="Jump"
-                android:textSize="16sp"
-                android:textColor="@color/black"
-                android:buttonTint="@color/black"/>
-            <RadioButton
-                android:id="@+id/bfc"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="Back-Foot Contact"
-                android:textSize="16sp"
-                android:textColor="@color/black"
-                android:buttonTint="@color/black"/>
-            <RadioButton
-                android:id="@+id/ffc"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="Front-Foot Contact"
-                android:textSize="16sp"
-                android:textColor="@color/black"
-                android:buttonTint="@color/black"/>
-            <RadioButton
-                android:id="@+id/release"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="Release"
-                android:textSize="16sp"
-                android:textColor="@color/black"
-                android:buttonTint="@color/black"/>
-        </RadioGroup>
+            android:layout_height="wrap_content"
+            android:buttonTint="@color/black"
+            android:text="Score"
+            android:textColor="@color/black"
+            android:textSize="16sp" />
+
+        <RadioButton
+            android:id="@+id/runup"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:buttonTint="@color/black"
+            android:text="Run-Up"
+            android:textColor="@color/black"
+            android:textSize="16sp" />
+
+        <RadioButton
+            android:id="@+id/jump"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:buttonTint="@color/black"
+            android:text="Jump"
+            android:textColor="@color/black"
+            android:textSize="16sp" />
+
+        <RadioButton
+            android:id="@+id/bfc"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:buttonTint="@color/black"
+            android:text="Back-Foot Contact"
+            android:textColor="@color/black"
+            android:textSize="16sp" />
+
+        <RadioButton
+            android:id="@+id/ffc"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:buttonTint="@color/black"
+            android:text="Front-Foot Contact"
+            android:textColor="@color/black"
+            android:textSize="16sp" />
+
+        <RadioButton
+            android:id="@+id/release"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:buttonTint="@color/black"
+            android:text="Release"
+            android:textColor="@color/black"
+            android:textSize="16sp" />
+    </RadioGroup>
 
 </LinearLayout>
